--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -10,11 +10,22 @@ interface Props {
 	title: string;
 	description: string;
 	image?: ImageMetadata;
+	article?: {
+		publishedTime: string;
+		author: string;
+		tags?: string[];
+		type?: 'Article' | 'BlogPosting';
+	};
+	webpage?: {
+		type: 'WebSite' | 'Blog';
+		name: string;
+		alternateName?: string;
+	};
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image = FallbackImage } = Astro.props;
+const { title, description, image = FallbackImage, article, webpage } = Astro.props;
 ---
 
 <!-- Global Metadata -->
@@ -55,3 +66,40 @@ const { title, description, image = FallbackImage } = Astro.props;
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image.src, Astro.url)} />
+
+<!-- Structured Data (JSON-LD) -->
+{article && (
+	<script type="application/ld+json" set:html={JSON.stringify({
+		"@context": "https://schema.org",
+		"@type": article.type || "Article",
+		"headline": title,
+		"description": description,
+		"author": {
+			"@type": "Person",
+			"name": article.author
+		},
+		"datePublished": article.publishedTime,
+		"image": new URL(image.src, Astro.url).toString(),
+		"url": canonicalURL.toString(),
+		"publisher": {
+			"@type": "Organization",
+			"name": SITE_TITLE,
+			"logo": {
+				"@type": "ImageObject",
+				"url": new URL("/favicon.svg", Astro.site).toString()
+			}
+		},
+		...(article.tags && { "keywords": article.tags.join(", ") })
+	})} />
+)}
+
+{webpage && (
+	<script type="application/ld+json" set:html={JSON.stringify({
+		"@context": "https://schema.org",
+		"@type": webpage.type,
+		"name": webpage.name,
+		"url": Astro.site?.toString(),
+		...(webpage.alternateName && { "alternateName": webpage.alternateName }),
+		"description": description
+	})} />
+)}
