--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -34,8 +34,8 @@ const today = new Date();
 <style>
 	footer {
 		padding: 2em 1em 6em 1em;
-		background: linear-gradient(var(--gray-gradient)) no-repeat;
-		color: rgb(var(--gray));
+		background: var(--gradient-bg) no-repeat;
+		color: var(--gray-600);
 		text-align: center;
 	}
 	.social-links {
@@ -46,9 +46,9 @@ const today = new Date();
 	}
 	.social-links a {
 		text-decoration: none;
-		color: rgb(var(--gray));
+		color: var(--gray-600);
 	}
 	.social-links a:hover {
-		color: rgb(var(--gray-dark));
+		color: var(--gray-700);
 	}
 </style>
