--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -38,7 +38,7 @@ import { SITE_TITLE } from '../consts';
 		margin: 0;
 		padding: 0 1em;
 		background: white;
-		box-shadow: 0 2px 8px rgba(var(--black), 5%);
+		box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
 	}
 	h2 {
 		margin: 0;
@@ -56,7 +56,7 @@ import { SITE_TITLE } from '../consts';
 	}
 	nav a {
 		padding: 1em 0.5em;
-		color: var(--black);
+		color: var(--gray-900);
 		border-bottom: 4px solid transparent;
 		text-decoration: none;
 	}
